UI-4115 Fix position for Popup on wiki page on tablet and mobile

--- a/platform-ui-skin/src/main/webapp/skin/less/_responsive.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/_responsive.less
@@ -305,6 +305,16 @@
         z-index: 99999!important;
     }
 
+    .wiki-body {
+        .uiPopupWrapper {
+            .uiPopup {
+                .translate(0, 0);
+                margin: 50px auto!important;
+                max-width: 90%!important;
+            }
+        }
+    }
+
     body.modal-open {
         overflow-y: hidden!important;
     }
